# TAKPacket-SDK

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  Package.swift  README.md  TESTING_PUNCHLIST.md  WIRE_FORMAT.md  build.sh  jitpack.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-maven.yml  release.yml
csharp/: Meshtastic.TAK.sln
csharp/Resources/: dict_aircraft.zstd
kotlin/: build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/api/: takpacket-sdk.api
kotlin/gradle/: libs.versions.toml
python/: pyproject.toml
python/src/meshtastic_tak/: __init__.py  atak_palette.py  atak_pb2.py  cot_type_mapper.py  cot_xml_builder.py  cot_xml_parser.py  dictionary_provider.py  tak_compressor.py
python/src/meshtastic_tak/meshtastic/: atak_pb2.py
python/tests/: conftest.py  test_compatibility.py  test_compression.py  test_cot_type_mapper.py  test_malformed_input.py  test_round_trip.py
swift/: Package.swift
testdata/: compression-report.md  generate_malformed.py
testdata/cot_xml/: aircraft_adsb.xml  alert_tic.xml  casevac.xml  casevac_medline.xml  drawing_circle.xml  drawing_circle_large.xml  drawing_ellipse.xml  drawing_freeform.xml  drawing_polygon.xml  drawing_rectangle.xml  drawing_rectangle_itak.xml  drawing_telestration.xml  geochat_simple.xml  marker_2525.xml  marker_goto.xml  marker_goto_itak.xml  marker_icon_set.xml  marker_spot.xml  marker_tank.xml  pli_basic.xml  pli_webtak.xml  pli_with_sensor.xml  ranging_bullseye.xml  ranging_circle.xml  ranging_line.xml  (+3 more)
typescript/: package-lock.json  package.json  tsconfig.json
(+849 files in other folders)
